production-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  namespace: production
  labels:
    tier: production
    app: mysql
spec:
  selector:
    matchLabels:
      tier: production
      app: mysql

  template:
    metadata:
      labels:
        tier: production
        app: mysql
    spec:
      containers:
        - name: mysql-prod
          image: mysql:5.6
          resources:
            limits:
              memory: "1Gi"
              cpu: "250m"
          ports:
            - containerPort: 3306
              name: mysql-prod-port

      nodeSelector:
        tier: production
      tolerations:
        - key: "tier"
          operator: "Equal"
          value: "production"
          effect: "NoSchedule"
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-prod-svc
  namespace: production
  labels:
    tier: production
spec:
  selector:
    tier: production
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deploy-pr
  namespace: production
  labels:
    tier: production
    app: wordpress
spec:
  replicas: 3
  selector:
    matchLabels:
      tier: production
      app: wordpress
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        tier: production
        app: wordpress
    spec:
      containers:
        - name: wordpress-cotainer-pr
          image: wordpress:5.6
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "0.5"
              memory: "512Mi"
            requests:
              cpu: "0.1"
              memory: "256Mi"
      nodeSelector:
        tier: production
      tolerations:
        - key: "tier"
          operator: "Equal"
          value: "production"
          effect: "NoSchedule"


---
apiVersion: v1
kind: Service
metadata:
  name: wp-prod-svc
  namespace: production
  labels:
    tier: production
    app: wordpress
spec:
  selector:
    tier: production
    app: wordpress
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30002
  type: NodePort
