ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  labels:
    tier: test
    app: wordpress
  namespace: test
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: testblog.devopsharun.click
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: test-svc
            port: 
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prod-ingress
  labels:
    tier: production
    app: wordpress
  namespace: production
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: companyblog.devopsharun.click
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: wp-prod-svc
            port: 
              number: 80
